# CPP_projekt-AGH

./: README.md  highscores.txt  kompilacja.bat  kompilacja.txt  main.cpp
Clion - cmake/: CMakeLists.txt
VS - cmake/: CMakeLists.txt  CMakePresets.json
functions/: constans.h  eventhandler.cpp  game.cpp  game.h  game.hpp  highscores.txt  menu.cpp  menu.h  move.cpp  renderer.cpp  textures.cpp  textures.h  utils.cpp
highscore/: highscores.txt
